deploy/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watson-twitch-tone-analysis
  labels:
    app: tone-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
       app: tone-analysis
  template:
    metadata:
      labels:
        app: tone-analysis
    spec:
      containers:
      - name: watson-twitch-tone-analysis
        image: nibalizer/watson-twitch-tone-analysis:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: configjson
          mountPath: "/usr/src/app/secrets"
          readOnly: true
      volumes:
      - name: configjson
        secret:
          secretName: watson-twitch-tone-analysis-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
       app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: configjson
          mountPath: "/usr/src/app/secrets"
          readOnly: true
      volumes:
      - name: configjson
        secret:
          secretName: watson-twitch-tone-analysis-secret
