deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8snibzscience.us-south.containers.mybluemix.net
    http:
      paths:
      - path: /
        backend:
          serviceName: tone-analysis
          servicePort: 80
